--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,12 @@
   </head>
 
   <body>
-
+    <!-- Navigation Bar -->
     <%= render 'layouts/navigation' %>
 
     <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-
+    <!-- Messages and Alert -->
+      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
 
