Day 26 Build Stock loolup form and Add font-awesome gem for icon's

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,3 +2,15 @@
 // .navbar-brand {
 //     font-size: 3rem;
 // }
+
+.search-area {
+    padding-top: 50px;
+}
+
+.no-right-padding {
+    padding-right: 0;
+}
+
+.no-left-padding {
+    padding-left: 5px;
+}
