--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -2,7 +2,7 @@
 
 <div class="search-area">
   <h3> Search Stocks </h3>
-  <%= form_tag search_stock_path, method: :get do %>
+  <%= form_with url: search_stock_path, method: "get", local: true, data: {turbo: false} do %>
     <div class="form-group row">
       <div class="col-sm-9 no-right-padding">
         <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-lg" %>
