--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -2,7 +2,7 @@
 
 <div class="search-area">
   <h3> Search Stocks </h3>
-  <%= form_with url: search_stock_path, method: "get", local: true, data: {turbo: false} do %>
+  <%= form_with url: search_stock_path, remote: true, method: "get", local: true, data: {turbo: false} do %>
     <div class="form-group row">
       <div class="col-sm-9 no-right-padding">
         <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-lg" %>
@@ -16,10 +16,4 @@
   <% end %>
 </div>
 
-<% if @stock %>
-<div class="card card-header results-block mt-5">
-  <strong> Symbol: </strong> <%= @stock.ticker %>
-  <strong> Name: </strong> <%= @stock.name %>
-  <strong> Price: </strong> <%= @stock.last_price %>
-</div>
-<% end %>
+<%= render 'users/result' %>
