Day 29 Modify user Model (Add first & last name)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,3 +18,10 @@
 .results-block {
     display: inline-block;
 }
+
+.user-name {
+    margin-top: 3.5%;
+    padding-right: 5px;
+    font-weight: bold;
+    font-size: 20px;
+}
