--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,6 +30,9 @@
         </ul>
 
         <ul class="navbar-nav mi-auto">
+          <li class="nav-item user-name me-2">
+            <%= fa_icon 'user' %> <%= current_user.full_name %>
+          </li>
           <li class="nav-item me-2">
             <%= link_to("Logout", destroy_user_session_path, class: "btn btn-xs btn-danger ", method: :delete)%>
           </li>
