--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-9">
     <h2 class="pb-4"><%= t('.title', resource: resource.model_name.human) %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -9,6 +9,17 @@
 	<%= f.label :email, class: 'form-label' %>
 	<%= f.email_field :email, autocomplete: 'email', class: 'form-control' %>
       </div>
+
+	<div class="row g-3">
+	  <div class="col-md-6 mb-3">
+		<%= f.label :first_name, class: 'form-label' %>
+		<%= f.text_field :first_name, autocomplete: 'first name', class: 'form-control' %>
+      </div>
+	  <div class="col-md-6 mb-3">
+		<%= f.label :last_name, class: 'form-label' %>
+		<%= f.text_field :last_name, autocomplete: 'last name', class: 'form-control' %>
+      </div>
+	</div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
 	<div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
