--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,10 +5,21 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="mb-3">
-	<%= f.label :email, class: "form-label" %>
-	<%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+    <div class="mb-3">
+	  <%= f.label :email, class: "form-label" %>
+	  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+    </div>
+
+	<div class="row g-3">
+	  <div class="col-md-6 mb-3">
+		<%= f.label :first_name, class: 'form-label' %>
+		<%= f.text_field :first_name, autocomplete: 'first name', class: 'form-control' %>
       </div>
+	  <div class="col-md-6 mb-3">
+		<%= f.label :last_name, class: 'form-label' %>
+		<%= f.text_field :last_name, autocomplete: 'last name', class: 'form-control' %>
+      </div>
+	</div>
 
       <div class="row mb-4">
 	<div class="col">
