--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,8 +10,8 @@
           <li class="nav-item" >
             <%= link_to 'My Portfolio', my_portfolio_path, class: "nav-link#{' active' if current_page?(my_portfolio_path)}" %>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+          <li class="nav-item" >
+            <%= link_to 'My Friends', my_friends_path, class: "nav-link#{' active' if current_page?(my_portfolio_path)}" %>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -25,9 +25,6 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
         </ul>
 
