--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -11,11 +11,11 @@
       <tbody>
         <% @friends.each do |friend| %>
           <tr>
-            <th scope="row"><%= friend.first_name %></th>
+            <td><%= friend.first_name %></td>
             <td><%= friend.last_name %></td>
             <td><%= friend.email %></td>
             <td>
-              <%= link_to 'Remove', '#', method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-primary' %>
+              <%= link_to 'Remove', '#', method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-warning' %>
             </td>
           </tr>
         <% end %>
