--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -4,17 +4,19 @@
   </div>
 </div>
 
-<% if @friend %>
+<% if @friends %>
   <div class="card card-header results-block">
-    <strong> First Name: </strong> <%= @friend.first_name %>
-    <strong> Last Name: </strong> <%= @friend.last_name %>
-    <strong> Email: </strong> <%= @friend.email %>
-    <% if current_user != @friend %>
-      <%= link_to 'Follow friend?', '#', class: "btn btn-xs btn-success", method: :post %>
-    <% else %>
-      <span class="btn btn-primary badge">
-        That's you bro! Can't be friends with yourself!  
-      </span>
-    <% end %>
+    <table class="col-md-12">
+      <tbody>
+        <% @friends.each do |friend| %>
+          <tr>
+            <td><strong> Name: </strong> <%= friend.full_name %></td>
+            <td><strong> Email: </strong> <%= friend.email %></td>
+            <td><strong> Actions: </strong> <%= link_to 'View Profile', '#', class: "btn btn-xs btn-success" %>
+            <%= link_to 'Follow friend?', '#', class: "btn btn-xs btn-success", method: :post %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 <% end %>
