--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -15,7 +15,7 @@
             <td><%= friend.last_name %></td>
             <td><%= friend.email %></td>
             <td>
-              <%= link_to 'Remove', '#', method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-warning' %>
+              <%= link_to 'Stop Following', friendship_path(friend), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-warning' %>
             </td>
           </tr>
         <% end %>
