--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -13,7 +13,14 @@
             <td><strong> Name: </strong> <%= friend.full_name %></td>
             <td><strong> Email: </strong> <%= friend.email %></td>
             <td><strong> Actions: </strong> <%= link_to 'View Profile', '#', class: "btn btn-xs btn-success" %>
-            <%= link_to 'Follow friend?', '#', class: "btn btn-xs btn-success", method: :post %></td>
+            <% if current_user.not_friends_with?(friend.id)%>
+              <%= link_to 'Follow friend?', '#', class: "btn btn-xs btn-success", method: :post %>
+            <% else %>
+              <span class="badge text-bg-light">
+                You are Already friends
+              </span>
+            <% end %>
+            </td>
           </tr>
         <% end %>
       </tbody>
