--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,9 +27,13 @@
 
       <div class="mb-3">
 	<%= f.label :current_password, class: 'form-label' %>
-	<%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
+	<%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control', id: "current_password" %>
 
 	<div class="form-text"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></div>
+	<div class="mt-3">
+      <%= check_box_tag 'show_password', '1', false, id: 'password_checkbox' %>
+      <%= label_tag 'show_password', 'Show Password' %>
+    </div>
       </div>
 
       <div class="row mb-4 mt-4">
@@ -38,15 +42,19 @@
 
 	<div class="col">
 	  <%= f.label :password, t('devise.passwords.edit.new_password'), class: 'form-label' %>
-	  <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
+	  <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control', id: "password_field" %>
 	  <% if @minimum_password_length %>
 	    <div class="form-text"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></div>
 	  <% end %>
 	</div>
 	<div class="col">
 	  <%= f.label :password_confirmation, t('devise.passwords.edit.confirm_new_password'), class: 'form-label' %>
-	  <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control' %>
+	  <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control', id: "password_confirmation_field" %>
 	</div>
+	<div class="mt-3">
+      <%= check_box_tag 'show_password', '1', false, id: 'show_password_checkbox' %>
+      <%= label_tag 'show_password', 'Show Password' %>
+    </div>
       </div>
 
       <div class="mb-3">
