--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
       <div class="row mb-4">
 	<div class="col">
 	  <%= f.label :password, class: "form-label" %>
-	  <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+	  <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', id: "password_field" %>
 
 	  <% if @minimum_password_length %>
 	    <div class="form-text"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></div>
@@ -33,8 +33,12 @@
 
 	<div class="col">
 	  <%= f.label :password_confirmation, class: "form-label" %>
-	  <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+	  <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: "password_confirmation_field" %>
 	</div>
+	<div class="mt-3">
+      <%= check_box_tag 'show_password', '1', false, id: 'show_password_checkbox' %>
+      <%= label_tag 'show_password', 'Show Password' %>
+    </div>
       </div>
 
       <div class="mb-3">
