--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,2 @@
-<h1>Welcome in finance tracter </h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Welcome in Finance Tracker </h1>
 
-
-<%=  link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete } %>
