Day 34 Add Footer

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,3 +25,9 @@
     font-weight: bold;
     font-size: 20px;
 }
+
+// footer's heart style
+.fa.fa-heart {
+    color: #E90606;
+    font-size: 22px;
+}
