--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,20 +11,12 @@
             <%= link_to 'My Portfolio', my_portfolio_path, class: "nav-link#{' active' if current_page?(my_portfolio_path)}" %>
           </li>
           <li class="nav-item" >
-            <%= link_to 'My Friends', my_friends_path, class: "nav-link#{' active' if current_page?(my_portfolio_path)}" %>
+            <%= link_to 'My Friends', my_friends_path, class: "nav-link#{' active' if current_page?(my_friends_path)}" %>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Profile
-            </a>
-            <ul class="dropdown-menu">
-              <%= link_to  edit_user_registration_path, class: 'dropdown-item' do%>
-                <%= fa_icon 'edit' %> Edit Profile
-              <% end %>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+          <li class="nav-item" >
+            <%= link_to  edit_user_registration_path, class: "nav-link#{' active' if current_page?(edit_user_registration_path)}" do%>
+              <%= fa_icon 'edit' %> Edit Profile 
+            <% end %>
           </li>
         </ul>
 
@@ -37,10 +29,6 @@
           </li>
         </ul>
 
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     <% end %>
   </div>
