day 34 Update welcome/home page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
 <h1>Welcome in Finance Tracker </h1>
 
+<h5>1. You can search stock </h5>
+<h5>2. Add Stock in your's portfolio</h5>
+<h5>3. You can track upto 10 stocks at a time</h5>
+<h5>4. You can search user </h5>
+<h5>5. You can also show other user's profile </h5>
+<h5>6. In other user's profile see user info and tracked stocks</h5>
+<h5>7. You can also follow other user's</h5>
+<h5>8. You can edit your profile</h5>
+
+  <%= link_to "Visit My Portflio", my_portfolio_path, class: "btn btn-primary mt-4" %>
+  <%= link_to "Visit My Friends", my_friends_path, class: "btn btn-primary ms-4 mt-4" %>
